<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_tab_fragment"
    android:orientation="vertical"
    tools:context=".SignupTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="65dp"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/avatar" />

                <Button
                    android:id="@+id/upload_avatar"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:textSize="8sp"
                    android:text="Upload Avatar"
                    app:cornerRadius = "5dp"/>

            </LinearLayout>


            <EditText
                android:id="@+id/signup_email"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="Email"
                android:padding="8dp" />

            <EditText
                android:id="@+id/uscid"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_perm_identity_24"
                android:drawablePadding="8dp"
                android:hint="USC ID"
                android:padding="8dp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:id="@+id/signup_name"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:hint="Name"
                android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:id="@+id/signup_affiliation"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:hint="Faculty/Student"
                android:drawableLeft="@drawable/baseline_local_cafe_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:text="Signup"
                app:cornerRadius = "30dp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>